--- a/css/accueil.css
+++ b/css/accueil.css
@@ -139,6 +139,21 @@ section .salamacontrol p i {
   box-shadow: 0px 0px 5px 0px var(--deepgreen);
 }
 
+.contact {
+  width: 70%;
+  margin: auto;
+  padding: 20px;
+}
+.contact h3 {
+  color: var(--deepgreen);
+}
+.contact h4 {
+  width: 80px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-bottom: 3px solid var(--yellow);
+}
+
 footer {
   padding: 15px 25px;
   display: flex;
@@ -198,4 +213,65 @@ li {
 .know-more {
   background: none;
   border: 2px solid var(--yellow);
+}
+
+form .formulaire {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  margin-top: 10px;
+}
+form .formulaire div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+form .formulaire div label {
+  font-weight: bolder;
+}
+form .formulaire div input {
+  border: none;
+  outline: none;
+  padding: 10px 18px;
+  margin-top: 5px;
+  border-radius: 4px;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 0px 0px 3px 0px var(--deepgreen);
+}
+form .textarea {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 10px;
+}
+form .textarea input {
+  border: none;
+  outline: none;
+  padding: 8px 12px;
+  margin-top: 5px;
+  border-radius: 4px;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 0px 0px 3px 0px var(--deepgreen);
+}
+form .textarea textarea {
+  border: none;
+  outline: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  font-family: "Montserrat", sans-serif;
+  box-shadow: 0px 0px 3px 0px var(--deepgreen);
+}
+form button {
+  width: 150px;
+  margin: auto;
+  border: none;
+  outline: none;
+  padding: 8px 15px;
+  margin-top: 10px;
+  border-radius: 5px;
+  background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
+}
+form button a {
+  color: var(--white);
+  font-family: "Montserrat", sans-serif;
 }/*# sourceMappingURL=accueil.css.map */
