--- a/sass/global/_typography.scss
+++ b/sass/global/_typography.scss
@@ -47,3 +47,67 @@ li{
     border: 2px solid var(--yellow);
     @extend .connecter;
 }
+
+//Pour notre formulaire de contact
+form{
+    .formulaire{
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        margin-top: 10px;
+        div{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            label{
+                font-weight: bolder;
+            }
+            input{
+                border: none;
+                outline: none;
+                padding: 10px 18px;
+                margin-top: 5px;
+                border-radius: 4px;
+                font-family: u.$font-Monserat;
+                box-shadow: 0px 0px 3px 0px var(--deepgreen);
+            }
+        }
+    }
+    .textarea{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 10px;
+        input{
+            border: none;
+            outline: none;
+            padding: 8px 12px;
+            margin-top: 5px;
+            border-radius: 4px;
+            font-family: u.$font-Monserat;
+            box-shadow: 0px 0px 3px 0px var(--deepgreen);
+        }
+        textarea{
+            border: none;
+            outline: none;
+            padding: 8px 12px;
+            border-radius: 5px;
+            font-family: u.$font-Monserat;
+            box-shadow: 0px 0px 3px 0px var(--deepgreen);
+        }
+    }
+    button{
+        width: 150px;
+        margin: auto;
+        border: none;
+        outline: none;
+        padding: 8px 15px;
+        margin-top: 10px;
+        border-radius: 5px;
+        background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
+        a{
+            color: var(--white);
+            font-family: u.$font-Monserat;
+        }
+    }
+}
