--- a/sass/global/_template.scss
+++ b/sass/global/_template.scss
@@ -25,13 +25,15 @@ header{
     }
     .header-content{
         width: 90%;
-        margin-top: 25px;
         padding: 15px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         position: fixed;
         z-index: 10;
+        top: 60px;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background-color: var(--deepgreen);
         .logo{
             display: flex;
