--- a/css/accueil.css
+++ b/css/accueil.css
@@ -135,24 +135,20 @@ section .salamacontrol .salamacontrol-content p i {
   margin-bottom: 10px;
   border-bottom: 3px solid var(--yellow);
 }
-.fonctionnalite .fontionnalite-content .bureau-side h5 {
-  font-weight: bolder;
-  color: var(--deepgreen);
-}
-.fonctionnalite .fontionnalite-content .bureau-side .bureau-side-content {
+.fonctionnalite .fontionnalite-content {
   display: grid;
+  gap: 15px;
   grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  margin-top: 10px;
 }
-.fonctionnalite .fontionnalite-content .bureau-side .bureau-side-content div {
+.fonctionnalite .fontionnalite-content div {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
-.fonctionnalite .fontionnalite-content .bureau-side .bureau-side-content div span {
+.fonctionnalite .fontionnalite-content div span {
   width: 30px;
   height: 30px;
+  padding: 10px 15px;
   border-radius: 100%;
   background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
 }
