--- a/sass/global/_template.scss
+++ b/sass/global/_template.scss
@@ -134,30 +134,23 @@ section{
         border-bottom: 3px solid var(--yellow);
     }
     .fontionnalite-content{
-        .bureau-side{
-            h5{
-                font-weight: bolder;
-                color: var(--deepgreen);
-            }
-            .bureau-side-content{
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                gap: 20px;
-                margin-top: 10px;
-                div{
-                    display: flex;
-                    flex-direction: row;
-                    gap: 10px;
-                    span{
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 100%;
-                        background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
-                    }
-                }
+        display: grid;
+        gap: 15px;
+        grid-template-columns: 1fr 1fr;
+        div{
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            span{
+                width: 30px;
+                height: 30px;
+                padding: 10px 15px;
+                border-radius: 100%;
+                background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
             }
         }
     }
+
 }
 //Les avantages de Salama Control
 .avantages{
