add to my repository

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -95,7 +95,7 @@ header .header-content .header-items ul .accueil {
 }
 
 section .salamacontrol {
-  background-image: url(../../Images/fond.jpg);
+  background-image: url(../../Images/image.png);
 }
 section .salamacontrol .salamacontrol-content {
   width: 70%;
@@ -197,7 +197,7 @@ section .salamacontrol .salamacontrol-content p i {
 }
 
 .suggestion {
-  background-image: url(../../Images/fond.jpg);
+  background-image: url(../../Images/image.png);
 }
 .suggestion .suggestion-content {
   width: 70%;
