--- a/sass/global/_template.scss
+++ b/sass/global/_template.scss
@@ -93,7 +93,7 @@ header{
 //Notre section va comporter les contenus de notre systeme Salama Control
 section{
     .salamacontrol{
-        background-image: url(../../Images/fond.jpg);
+        background-image: url(../../Images/image.png);
         .salamacontrol-content{
             width: 70%;
             margin: auto;
@@ -198,7 +198,7 @@ section{
 
 //Boite de suggestion
 .suggestion{
-    background-image: url(../../Images/fond.jpg);
+    background-image: url(../../Images/image.png);
     .suggestion-content{
         width: 70%;
         margin: auto;
