--- a/css/accueil.css
+++ b/css/accueil.css
@@ -125,7 +125,7 @@ section .salamacontrol .salamacontrol-content p i {
   margin: auto;
   padding: 20px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 .fonctionnalite h3 {
   color: var(--deepgreen);
@@ -237,10 +237,11 @@ footer {
   background-color: var(--deepgreen);
 }
 footer .footer-content {
-  display: flex;
-  align-items: center;
   color: var(--white);
-  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 footer .footer-content div a {
   color: var(--white);
@@ -322,9 +323,9 @@ form .formulaire {
   margin-top: 10px;
 }
 form .formulaire div {
-  display: flex;
-  flex-direction: column;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 form .formulaire div label {
   font-weight: bolder;
@@ -332,43 +333,35 @@ form .formulaire div label {
 form .formulaire div input {
   border: none;
   outline: none;
-  padding: 10px 18px;
+  padding: 8px 12px;
   margin-top: 5px;
   border-radius: 4px;
-  font-family: "Montserrat", sans-serif;
   box-shadow: 0px 0px 3px 0px var(--deepgreen);
+  font-family: "Montserrat", sans-serif;
 }
 form .textarea {
-  display: flex;
-  flex-direction: column;
   gap: 20px;
   margin-top: 10px;
+  display: flex;
+  flex-direction: row;
 }
-form .textarea input {
+form .textarea input, form .textarea textarea {
   border: none;
   outline: none;
   padding: 8px 12px;
   margin-top: 5px;
   border-radius: 4px;
-  font-family: "Montserrat", sans-serif;
   box-shadow: 0px 0px 3px 0px var(--deepgreen);
-}
-form .textarea textarea {
-  border: none;
-  outline: none;
-  padding: 8px 12px;
-  border-radius: 5px;
   font-family: "Montserrat", sans-serif;
-  box-shadow: 0px 0px 3px 0px var(--deepgreen);
 }
 form button {
   width: 150px;
-  margin: auto;
   border: none;
   outline: none;
-  padding: 8px 15px;
-  margin-top: 10px;
-  border-radius: 5px;
+  padding: 8px 12px;
+  margin-top: 5px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 3px 0px var(--deepgreen);
   background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
 }
 form button a {
