--- a/sass/global/_typography.scss
+++ b/sass/global/_typography.scss
@@ -1,4 +1,5 @@
 @use '../utils/' as u;
+@use '../utils/mixins' as *;
 
 // Base reset
 
@@ -52,59 +53,33 @@ li{
 //Pour notre formulaire de contact
 form{
     .formulaire{
-        display: flex;
-        flex-direction: row;
+        @include display;
         gap: 15px;
         margin-top: 10px;
         div{
-            display: flex;
-            flex-direction: column;
             width: 100%;
+            @include display-grid;
             label{
                 font-weight: bolder;
             }
             input{
-                border: none;
-                outline: none;
-                padding: 10px 18px;
-                margin-top: 5px;
-                border-radius: 4px;
+                @include input-properties;
                 font-family: u.$font-Monserat;
-                box-shadow: 0px 0px 3px 0px var(--deepgreen);
             }
         }
     }
     .textarea{
-        display: flex;
-        flex-direction: column;
         gap: 20px;
         margin-top: 10px;
-        input{
-            border: none;
-            outline: none;
-            padding: 8px 12px;
-            margin-top: 5px;
-            border-radius: 4px;
+        @include display-grid;
+        input, textarea{
+            @include input-properties;
             font-family: u.$font-Monserat;
-            box-shadow: 0px 0px 3px 0px var(--deepgreen);
-        }
-        textarea{
-            border: none;
-            outline: none;
-            padding: 8px 12px;
-            border-radius: 5px;
-            font-family: u.$font-Monserat;
-            box-shadow: 0px 0px 3px 0px var(--deepgreen);
         }
     }
     button{
         width: 150px;
-        margin: auto;
-        border: none;
-        outline: none;
-        padding: 8px 15px;
-        margin-top: 10px;
-        border-radius: 5px;
+        @include input-properties;
         background: linear-gradient(45deg, var(--deepgreen), var(--yellow));
         a{
             color: var(--white);
