--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -11,3 +11,19 @@
     display: flex;
     flex-direction: row;
 }
+
+//display les elements en column
+@mixin display-grid{
+    display: flex;
+    flex-direction: row;
+}
+
+//Input properties
+@mixin input-properties{
+    border: none;
+    outline: none;
+    padding: 8px 12px;
+    margin-top: 5px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 3px 0px var(--deepgreen);
+}
