--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -15,7 +15,7 @@
 //display les elements en column
 @mixin display-grid{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 //Input properties
@@ -26,4 +26,18 @@
     margin-top: 5px;
     border-radius: 4px;
     box-shadow: 0px 0px 3px 0px var(--deepgreen);
+}
+
+//Titre h4
+@mixin title{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-bottom: 3px solid var(--yellow);
+}
+
+//Pour le placement des div
+@mixin placement-div{
+    width: 70%;
+    margin: auto;
+    padding: 20px;
 }
