add to my repository

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -82,10 +82,14 @@ header .header-content .header-items ul .accueil {
   color: var(--yellow);
   border-bottom: 2px solid var(--yellow);
 }
+header .header-content .menu {
+  display: none;
+}
 
 .cover-page {
   height: 100vh;
   text-align: center;
+  padding: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -370,4 +374,67 @@ form button {
 form button a {
   color: var(--white);
   font-family: "Montserrat", sans-serif;
+}
+
+@media screen and (max-width: 978px) and (max-width: 900px) {
+  header .header-content .header-items {
+    display: none;
+  }
+  header .header-content .menu {
+    display: initial;
+  }
+  section .salamacontrol .salamacontrol-content {
+    width: 90%;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .fonctionnalite, .contact {
+    width: 90%;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .avantages .avantages-items {
+    width: 90%;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+@media screen and (max-width: 768px) and (max-width: 650px) {
+  .fonctionnalite .fontionnalite-content {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .suggestion .suggestion-content {
+    width: 90%;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-bottom: 20px;
+  }
+}
+@media (max-width: 480px) {
+  form .formulaire {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+  .avantages .avantages-items .avantages-content {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  footer .footer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (max-width: 480px) and (max-width: 380px) {
+  .cover-page div {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
 }/*# sourceMappingURL=accueil.css.map */
