--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -41,3 +41,11 @@
     margin: auto;
     padding: 20px;
 }
+
+//Placement des divs pour le media query
+@mixin placement{
+    width: 90%;
+    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
