--- a/css/accueil.css
+++ b/css/accueil.css
@@ -85,6 +85,39 @@ header .header-content .header-items ul .accueil {
 header .header-content .menu {
   display: none;
 }
+header .header-content .menu .menu-icons {
+  color: var(--deepgreen);
+  padding: 8px 8px;
+  border-radius: 50%;
+  background-color: var(--yellow);
+}
+header .header-content .menu .menu-container {
+  position: absolute;
+  top: 70px;
+  right: 1px;
+  width: 100%;
+  height: 50vh;
+  transition: 1s;
+  margin-top: -200%;
+  z-index: -1;
+  background-color: var(--deepgreen);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+header .header-content .menu .menu-container ul li {
+  list-style: none;
+  margin-bottom: 25px;
+  color: var(--deepgreen);
+  padding: 8px 12px;
+  border: 1px solid var(--yellow);
+}
+header .header-content .menu .menu-container ul li a {
+  color: var(--white);
+  text-decoration: none;
+}
 
 .cover-page {
   height: 100vh;
@@ -382,6 +415,23 @@ form button a {
   }
   header .header-content .menu {
     display: initial;
+  }
+  header .header-content .menu .menu-icons .icon {
+    display: block;
+    cursor: pointer;
+  }
+  header .header-content .menu .menu-icons .exit {
+    display: none;
+    cursor: pointer;
+  }
+  header .header-content .menu .menu-mobile .icon {
+    display: none;
+  }
+  header .header-content .menu .menu-mobile .exit {
+    display: initial;
+  }
+  header .header-content .menu .menu-mobile {
+    margin-top: 0;
   }
   section .salamacontrol .salamacontrol-content {
     width: 90%;
