--- a/sass/global/_template.scss
+++ b/sass/global/_template.scss
@@ -70,6 +70,41 @@ header{
         }
         .menu{
             display: none;
+            .menu-icons{
+                color: var(--deepgreen);
+                padding: 8px 8px;
+                border-radius: 50%;
+                background-color: var(--yellow);
+            }
+            .menu-container{
+                position: absolute;
+                top: 70px;
+                right: 1px;
+                width: 100%;
+                height: 50vh;
+                transition: 1s;
+                margin-top: -200%;
+                z-index: -1;
+                background-color: var(--deepgreen);
+                @include display;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                ul{
+                    
+                    li{
+                        list-style: none;
+                        margin-bottom: 25px;
+                        color: var(--deepgreen);
+                        padding: 8px 12px;
+                        border: 1px solid var(--yellow);
+                        a{
+                            color: var(--white);
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
         }
     }
 }
