--- a/sass/global/_template.scss
+++ b/sass/global/_template.scss
@@ -81,26 +81,24 @@ header{
                 top: 70px;
                 right: 1px;
                 width: 100%;
-                height: 50vh;
                 transition: 1s;
                 margin-top: -200%;
-                z-index: 5;
                 background-color: var(--deepgreen);
                 @include display;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
                 ul{
-                    
+                    width: 100%;
                     li{
                         list-style: none;
-                        margin-bottom: 25px;
                         color: var(--deepgreen);
-                        padding: 8px 12px;
-                        border: 1px solid var(--yellow);
+                        text-align: center;
+                        padding: 15px;
+                        border-bottom: 1px solid var(--yellow);
                         a{
                             color: var(--white);
                             text-decoration: none;
+                            &:hover{
+                                color: var(--yellow);
+                            }
                         }
                     }
                 }
