--- a/sass/global/_template.scss
+++ b/sass/global/_template.scss
@@ -3,6 +3,7 @@
 
 body{
     width: 100%;
+    height: 100vh;
     font-size: 16px;
     font-family: u.$font-Monserat;
 }
@@ -36,7 +37,9 @@ header{
         transform: translate(-50%, -50%);
         background-color: var(--deepgreen);
         .logo{
-            gap: 8px;@include display-flex;
+            gap: 8px;
+            -webkit-column-gap: 8px;
+            @include display-flex;
             justify-content: none;
             i{
                 padding: 10px;
@@ -55,6 +58,7 @@ header{
             ul{
                 @include display;
                 gap: 15px;
+                -webkit-column-gap: 15px;
                 a{
                     color: var(--white);
                     &:hover{
@@ -159,10 +163,12 @@ section{
     .fontionnalite-content{
         display: grid;
         gap: 15px;
+        -webkit-column-gap: 15px;
         grid-template-columns: 1fr 1fr;
         div{
             @include display;
             gap: 10px;
+            -webkit-column-gap: 10px;
             span{
                 width: 30px;
                 height: 30px;
