--- a/sass/global/_typography.scss
+++ b/sass/global/_typography.scss
@@ -56,6 +56,7 @@ form{
         @include display;
         gap: 15px;
         margin-top: 10px;
+        -webkit-column-gap: 15px;
         div{
             width: 100%;
             @include display-grid;
@@ -72,6 +73,7 @@ form{
         gap: 10px;
         margin-top: 10px;
         @include display-grid;
+        -webkit-column-gap: 10px;
         input, textarea{
             @include input-properties;
             font-family: u.$font-Monserat;
